# translator_rust_window

./: .gitignore  README.md
rusty-tesseract-custom-1.1.4/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
rusty-tesseract-custom-1.1.4/src/: main.rs
rusty-tesseract-custom-1.1.4/src/tesseract/: command.rs
translator_window - copia/: .gitignore  Cargo.toml  README.md
translator_window - copia/src/: main.rs
translator_window - copia/src/libs/: Translator.rs  mod.rs  russty_tesseractlib.rs
